# ai-excel-interviewer

./: .env.example  .excel_interviewer_a2a_session.json  .gitignore  Design_and_Implementation_Strategy.md  README.md
ai_excel_interviewer/: README.md  pyproject.toml  requirements.txt
ai_excel_interviewer/src/: config.py
ai_excel_interviewer/src/ai_excel_interviewer/: __main__.py  agent.py  agent_executor.py
ai_excel_interviewer/src/backend_api/: server.py
ai_excel_interviewer/src/client/: a2a_client.py  mcp_client.py
ai_excel_interviewer/src/mcp_server/: server.py
ai_excel_interviewer/src/prompts/: agent_prompt.yaml
ai_excel_interviewer/src/utils/: prompts_loader.py
bff/: README.md  pyproject.toml
bff/src/: chat.py  main.py  schemas.py  service.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: InterviewPage.css  InterviewPage.tsx  LandingPage.css  LandingPage.tsx
shared_src/: config.py
shared_src/db/: README.md  database.py  models.py
