# =============================================================================
# agents/ai_excel_interviewer/pyproject.toml
#
# Project definition for the AI Excel Interviewer Agent.
# - Conducts adaptive mock interviews for Excel skills assessment.
# - Uses A2A and MCP protocols for inter-agent collaboration.
# =============================================================================

[build-system]
# PEP 517 build backend requirements
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
# --- Basic Project Metadata ---
name            = "ai-excel-interviewer"
version         = "1.0.0"
description     = "An adaptive AI agent that conducts mock interviews for Excel skills."
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "Apache-2.0" }

# Author information
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]

# Keywords for discoverability
keywords = [
  "ai-agent",
  "excel",
  "interview",
  "skills-assessment",
]

# -----------------------------------------------------------------------------
# Core Runtime Dependencies
# -----------------------------------------------------------------------------
dependencies = [
  # Agent frameworks & protocols
  "google-adk==1.4.1",
  "a2a-sdk==0.2.9",
  "fastmcp>=2.8.1",

  # Web framework & server
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",

  # Networking & API calls
  "httpx>=0.27.0",

  # Configuration & environment management
  "pydantic>=2.8.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0",

  # Database connectivity
  "sqlalchemy[asyncio]>=2.0",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.1",

  # LLM integration
  "google-generativeai>=0.7.2",

  # CLI support
  "click>=8.1.0",
]

# -----------------------------------------------------------------------------
# CLI Entrypoints
# -----------------------------------------------------------------------------
[project.scripts]
ai-excel-interviewer-agent      = "ai_excel_interviewer.src.__main__:main"
ai-excel-interviewer-mcp-server = "ai_excel_interviewer.src.mcp_server.server:main"
ai-excel-interviewer-client-a2a = "ai_excel_interviewer.src.client.a2a_client:main"
ai-excel-interviewer-backend    = "ai_excel_interviewer.src.backend_api.server:main"

# -----------------------------------------------------------------------------
# Hatch Build Configuration
# -----------------------------------------------------------------------------
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "src/ai_excel_interviewer",
  "src/client",
  "src/prompts",
  "src/utils"
]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/prompts",
  "/README.md"
]

# -----------------------------------------------------------------------------
# Linting & Testing Configuration
# -----------------------------------------------------------------------------
[tool.ruff]
line-length    = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
