# =============================================================================
# bff/src/pyproject.toml
#
# Project definition for the Backend-for-Frontend service.
# =============================================================================
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "ai-excel-interviewer-bff"
version         = "0.1.0"
description     = "BFF to connect the AI Excel Interviewer agent to a web frontend."
requires-python = ">=3.11"
license         = { text = "Apache-2.0" }

authors = [
  { name = "Sai Nikhil", email = "nikhilgodavarthi9@gmail.com" },
]

keywords = ["bff", "fastapi", "chat", "gateway"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
]

dependencies = [
  # Core framework
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",

  # Data & validation
  "pydantic>=2.8.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",

  # Security & auth (optional)
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff",
]

[project.scripts]
bff-server = "src.main:cli_main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/pyproject.toml", "/README.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]